parser: variables
